fix home layout gap + cost block alignment prep

--- a/src/HomeScreen.css
+++ b/src/HomeScreen.css
@@ -123,7 +123,7 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  gap: 14;
+ gap: 0px;
   z-index: 20;
 }
 
